plugins/javaFX/testData/highlighting/resourceKeyInAttribute.fxml
<?import javafx.scene.control.Label?>
<?import javafx.scene.layout.VBox?>
<?import java.lang.Double?>
<?import java.lang.Integer?>
<?import java.lang.String?>
<VBox xmlns:fx="http://javafx.com/fxml">
  <fx:define>
    <Double fx:id="d" fx:value=<error descr="Invalid value: unable to coerce to java.lang.Double">"%double.key"</error>/>
    <String fx:id="s" fx:value="%string.key"/>
  </fx:define>
  <Label text="%string.key" maxWidth="%double.key" maxHeight="%<error descr="Cannot resolve property key">missing.key</error>"/>
</VBox>